357
Okay, the same problems exist with Nothing -- Scala just won't let you directly inherit from Nothing:
```scala
scala> class Foo extends Nothing
<console>:4: error: illegal inheritance; superclass Any
 is not a subclass of the superclass Object
 of the mixin trait ScalaObject
       class Foo extends Nothing
             ^
<console>:4: error: Any does not have a constructor
       class Foo extends Nothing
```
But you can do the following (and then do the same sorts of stuff as I showed for Null):
```scala
scala> class Foo extends AnyRef with Nothing
defined class Foo
```
